# MCUFramework

./: CMakeLists.txt  README.md
cmake/: mcu.cmake
examples/stm32/: ArmTest.cpp  CMakeLists.txt
include/: Button.h  Encoder.h  NRF24L01.h  Power.h  Spi.h  ioDefinitions.h  ioRegisters.h  iopin.h  ioports.h  latch.h
include/avr/: iopin.h  ports.h  xmegaports.h
include/stm32f4xx/: clock.h  native_ports.h
include/stm32f4xx/cmsis/: stm32_flash.ld.in  system_stm32f4xx.c
include/stm32f4xx/cmsis/include/: stm32f4xx.h
resources/: pinlist.h
resources/include/: typelist.h
test/avr/: AvrTest.cpp  CmakeLists.txt
test/stm32/: ArmTest.cpp  CMakeLists.txt
